1999-01-28  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* main.m (main): Update version string (argument to initSwarmApp)
	to 1.4.

1999-01-16  Alex Lancaster  <alex@santafe.edu>

	* HeatbugBatchSwarm.m ([HeatbugBatchSwarm -go]): Changed printf to
	refer to the correct invocation of batch mode.
	Reformatting throughout.

1999-01-14  Alex Lancaster  <alex@santafe.edu>

	* README: Note regarding toggleRandomizedOrder.

	* HeatbugModelSwarm.[hm] ([HeatbugModelSwarm
	-toggleRandomizedOrder]): New method, toggles the randomizedOrder
	state for the heatbugList traversal.  Default is Sequential
	(i.e. `NO').
	([HeatbugModelSwarm +createBegin:]): Removed VarProbe for
	randomizeHeatbugUpdateOrder, add MessageProbe for
	toggleRandomizedOrder.

1999-01-13  Alex Lancaster  <alex@santafe.edu>

	* README: Add notes regarding new randomization feature.

	* HeatbugModelSwarm.h (@interface): Add new BOOL iVar
	`randomizeHeatbugUpdateOrder' to class.

	* HeatbugModelSwarm.m ([HeatbugModelSwarm -buildActions]): Add a
	conditional test to set the defaultOrder of the
	`createActionForEach' action to `Randomize' if the
	`randomizeHeatbugUpdateOrder' flag is set.  Add comments in the
	code to explain the purpose and implementation of this feature.
	([HeatbugModelSwarm +createBegin:]): Set the
	`randomizeHeatbugUpdateOrder' flag to `NO' by default.
	Add a probe in the probeMap for this new flag.

1998-11-04  Alex Lancaster  <alex@santafe.edu>

	* HeatbugObserverSwarm.m ([HeatbugObserverSwarm -buildObjects:]):
	In object creation change all calls of `[self getZone]' with
	`self'.  
	Don't explicitly create a `Zone' for the modelSwarm - it is
	created implicitly, when a subclass of `Swarm' is instantiated.
	Remove appropriate local variables.
	([HeatbugObserverSwarm -_update_]): In object creation change call
	of `[self getZone]' with `self'.
	([HeatbugObserverSwarm -buildActions]): Likewise.

	* HeatbugBatchSwarm.m ([HeatbugBatchSwarm -{buildObjects,